# salwa-mart

inventry_services/: .env  README.md  pyproject.toml
inventry_services/inventry_services/: crud.py  inventory_db.py  inventory_model.py  main.py  models.py  rotuer.py  schemas.py  settings.py
notification_services/: pyproject.toml
order_services/: pyproject.toml
payment_services/: pyproject.toml
product_services/: pyproject.toml
user_services/: pyproject.toml
